examples/bad/06-07-duplicate-arguments.lagger
int f(int n, int n){
    return 0;
}

int main(){
    f(2,3);
    return 0;
}
